--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
     "zod": "^3.25.28"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^22",
     "@types/yargs": "^17.0.32",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
+    "ts-jest": "^29.3.4",
     "typescript": "^5.3.3"
   },
   "keywords": [
