--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ package-lock.json
 # Build outputs
 dist/
 build/
+coverage/
 *.tsbuildinfo
 
 # Environment variables
@@ -23,6 +24,7 @@ build/
 *.swp
 *.swo
 *~
+.rdbgrc.breakpoints
 
 # OS generated files
 .DS_Store
