--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "start": "node dist/index.js",
     "docker": "docker build -t waldzellai/thinking-patterns .",
     "dev": "npm run watch",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test": "npx --experimental-vm-modules node_modules/.bin/jest",
+    "test:watch": "node --experimental-vm-modules node_modules/.bin/jest --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
+    "test:ci": "node --experimental-vm-modules node_modules/.bin/jest --ci --coverage --watchAll=false",
     "lint": "echo \"No linting configured\" && exit 0",
     "deploy": "smithery deploy"
   },
@@ -37,25 +37,28 @@
     "url": "https://github.com/emmahyde/thought-patterns.git"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.5.0",
-    "@types/chalk": "^0.4.31",
+    "@modelcontextprotocol/sdk": "^1.12.0",
+    "@types/chalk": "^2.2.4",
     "ascii-table3": "^0.9.0",
     "boxen": "^8.0.1",
-    "chalk": "^5.3.0",
+    "chalk": "^5.4.1",
     "string-width": "^7.2.0",
     "wrap-ansi": "^9.0.0",
-    "yargs": "^17.7.2",
-    "zod": "^3.25.30"
+    "yargs": "^18.0.0",
+    "zod": "^3.25.32"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.3",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22",
-    "@types/yargs": "^17.0.32",
+    "@types/node": "^22.15.23",
+    "@types/yargs": "^17.0.33",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "source-map": "^0.7.4",
     "ts-jest": "^29.3.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "keywords": [
     "mcp",
