--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,10 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20.19'
-        cache: 'node'
+        cache: 'npm'
 
     - name: Install dependencies
       run: npm install --frozen-lockfile
 
     - name: Run tests
-      run: npm run test:ci --forceExit
+      run: npm run test:ci
