add push-to-main to triggers

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,7 @@
 name: NPM tests
 
 on:
+  push:
   pull_request:
 
 jobs:
@@ -22,3 +23,4 @@ jobs:
 
     - name: Run tests
       run: npm run test:ci
+
