--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@emmahyde/thought-patterns",
-  "version": "1.0.0",
+  "name": "@emmahyde/thinking-patterns",
+  "version": "1.0.1",
   "description": "MCP server combining systematic thinking, mental models, debugging approaches, and stochastic algorithms for comprehensive cognitive pattern support",
   "license": "MIT",
   "author": "Emma Hyde",
-  "homepage": "https://github.com/emmahyde/thought-patterns",
-  "bugs": "https://github.com/emmahyde/thought-patterns/issues",
+  "homepage": "https://github.com/emmahyde/thinking-patterns",
+  "bugs": "https://github.com/emmahyde/thinking-patterns/issues",
   "type": "module",
   "bin": {
-    "mcp-server-thought-patterns": "dist/index.js"
+    "mcp-server-thinking-patterns": "dist/index.js"
   },
   "files": [
     "dist",
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/emmahyde/thought-patterns.git"
+    "url": "git+https://github.com/emmahyde/thinking-patterns.git"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.0",
@@ -54,7 +54,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.23",
     "@types/yargs": "^17.0.33",
-    "jest": "^29.7.0", 
+    "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "source-map": "^0.7.4",
     "ts-jest": "^29.3.4",
